force-app/main/default/objects/b3o__Invoice_Configuration_Key__c/b3o__Invoice_Configuration_Key__c.object-meta.xml
<CustomObject>
    <label>Invoice Configuration Key</label>
    <nameField>
        <displayFormat>INV-C-K-{0}</displayFormat>
        <label>Invoice Configuration Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Configuration Keys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>