force-app/main/default/objects/b3o__Invoice_Configuration_Key__c/fields/b3o__Invoice_Configuration__c.field-meta.xml
<CustomField>
    <fullName>b3o__Invoice_Configuration__c</fullName>
    <label>Invoice Configuration</label>
    <referenceTo>b3o__Invoice_Configuration__c</referenceTo>
    <relationshipLabel>Invoice Configuration Keys</relationshipLabel>
    <relationshipName>Invoice_Configuration_Keys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>