force-app/main/default/objects/b3o__Invoice_Configuration_Key__c/fields/b3o__Order__c.field-meta.xml
<CustomField>
    <fullName>b3o__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>