force-app/main/default/objects/b3o__Invoice_Configuration_Key__c/fields/b3o__Relative_Path__c.field-meta.xml
<CustomField>
    <fullName>b3o__Relative_Path__c</fullName>
    <label>Relative Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>