force-app/main/default/objects/b3o__Invoice_Configuration_Key__c/fields/b3o__Type__c.field-meta.xml
<CustomField>
    <fullName>b3o__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>