force-app/main/default/objects/b3o__Invoice_Configuration_Key__c/fields/b3o__Write_to_Field__c.field-meta.xml
<CustomField>
    <fullName>b3o__Write_to_Field__c</fullName>
    <inlineHelpText>If this is a grouping key, then this will be a timesheet line&apos;s field. Otherwise, this should be the timesheet field to which we want to write the value of the field key</inlineHelpText>
    <label>Write to Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>